<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_item_group_channels"
            android:icon="@drawable/ic_group_channels"
            android:title="@string/group_channels" />
        <item
            android:id="@+id/nav_item_open_channels"
            android:icon="@drawable/ic_open_channels"
            android:title="@string/open_channels" />
        <item
            android:id="@+id/nav_item_calendar"
            android:icon="@drawable/baseline_event_black_18dp"
            android:title="@string/calendar" />
        <item
            android:id="@+id/nav_item_user_list"
            android:icon="@drawable/baseline_book_black_36dp"
            android:title="@string/address_book" />
        <item
            android:id="@+id/nav_item_view_own_profile"
            android:icon="@drawable/baseline_assignment_ind_black_48dp"
            android:title="@string/my_profile" />

    </group>

    <group android:id="@+id/nav_group_actions"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item_disconnect"
            android:icon="@drawable/ic_disconnect"
            android:title="@string/disconnect" />
    </group>
</menu>