<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.eddierangel.southkern.android.main.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/baseline_info_black_18dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="com.eddierangel.southkern.android.main.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/baseline_notifications_black_18dp"
        android:title="@string/pref_header_notifications" />

    <header
        android:fragment="com.eddierangel.southkern.android.main.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/baseline_sync_black_18dp"
        android:title="@string/pref_header_data_sync" />

</preference-headers>
